k8s/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  type: NodePort
  selector:
    app: userservice-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
